borsh-derive/src/snapshots/borsh_schema_derive_internal__struct_schema__tests__tuple_struct_params.snap
---
source: borsh-schema-derive-internal/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::BorshSchema for A<K, V>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K > ::declaration(), < V > ::declaration()
        ];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < K as borsh::BorshSchema > ::declaration(), < V as borsh::BorshSchema >
                ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        Self::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {
            <K as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <V as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

